# term-homework

./: .dockerignore  .gitignore  CMakeLists.txt  Caddyfile  Dockerfile  Dockerfile.caddy  Dockerfile.frontend-builder  Makefile  README.md  config.docker.json  config.example.json  docker-compose.yml  docker-entrypoint.sh  icp.html  project-defense.html  release.sh  run-tests.sh  start-db.sh  start.sh
.github/workflows/: deploy.yml
frontend/: .gitignore  Cargo.toml  Dioxus.toml  tailwind.css
frontend/assets/: tailwind.css
frontend/src/: api.rs  main.rs  models.rs  state.rs  ui.rs
frontend/src/pages/: admin.rs  auth.rs  books.rs  borrowed.rs  introduction.rs  mod.rs  profile.rs
src/: CMakeLists.txt  main.cpp
src/auth/: AuthFilter.cpp  AuthFilter.h  jwt.cpp  jwt.h
src/controller/: book.cpp  lib.cpp  user.cpp
src/init/: init.cpp  init.h  routes.cpp
src/models/: models.cpp  models.h
src/utils/: base64.cpp  base64.h  config.cpp  config.h  env.cpp  env.h  hash.cpp  hash.h  response.h
tests/: CMakeLists.txt  test_main.cpp
